# function_analyzer

./: .gitignore  README.md  dropbear  dropbear_disassembly.txt  example.md  pyproject.toml  test.py
src/: agent.py  binary_loader.py  boundary_detector.py  disassembler.py  main.py
src/function_analyzer/: agent.py  chat.py  main.py
src/function_analyzer/components/: binary_loader.py  boundary_detector.py  disassembler.py  models.py  tooling.py
