[project]
name = "function-analyzer"
version = "0.1.0"
description = "Agentic showcase for reverse engineering tasks using oss-gpt-20b"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "capstone>=5.0.6",
    "mamba-ssm>=2.2.5",
    "numpy>=2.2.6",
    "ollama>=0.5.2",
    "pefile>=2024.8.26",
    "pyelftools>=0.32",
    "torch>=2.8.0",
]
