[project]
name = "function-analyzer"
version = "0.1.0"
description = "Agentic showcase for reverse engineering tasks using oss-gpt-20b"
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "capstone>=5.0.6",
    "mamba-ssm>=2.2.5",
    "numpy>=2.2.6",
    "ollama>=0.5.2",
    "openai>=1.100.0",
    "pefile>=2024.8.26",
    "pydantic>=2.11.7",
    "pyelftools>=0.32",
    "torch>=2.0.0",
    "typer>=0.16.1",
]


[project.scripts]
cli = "function_analyzer.main:main"
chat = "function_analyzer.chat:main"

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py39"
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
